--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <div class="col-12 col-md-10 col-lg-8">
                     <h1 class="fs-5 mb-2 text-secondary text-uppercase">About Me</h1>
                     <p class="mb-4 text-white">Selamat datang di halaman saya! Saya James, seorang profesional berdedikasi dengan latar belakang dalam bidang IT. Sebagai seorang pria berkulit hitam yang bangga dengan identitas dan penampilan saya, saya percaya bahwa keunikan adalah kekuatan. Saya memiliki pengalaman bertahun-tahun dalam Bidang IT, di mana saya telah berhasil mengelola proyek-proyek kompleks dan bekerja sama dengan tim-tim beragam. Saya selalu berusaha untuk menampilkan standar profesionalisme tertinggi, baik dalam penampilan maupun etika kerja.</p>
-                    <button type="button" class="btn btn-sm btn-danger mb-3 mb-md-4 mb-xl-5" href="kontak.html">Connect Now</a>
+                    <a type="button" class="btn btn-sm btn-danger mb-3 mb-md-4 mb-xl-5" href="kontak.html">Connect Now</a>
                 </div>
             </div>
         </div>
